--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
             <div class="fila" style="display: flex; justify-content: center; gap: 20px;">
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Blusa_damaia_atelier_manga_larga_para_mujer.avif" alt="Blusa damaia atelier">
-                    <h3>1. Blusa damaia atelier manga larga para mujer</h3>
+                    <h3>Blusa damaia atelier manga larga para mujer</h3>
                     <p>$299.00</p>
                     <button onclick="agregarAlCarrito('Blusa damaia atelier manga larga para mujer', 299.00)">Agregar al Carrito</button>
                 </div>
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Vestido_midi_casual_para_mujer.avif" alt="Blusa manga 3/4">
-                    <h3>2. Vestido midi casual para mujer.avif</h3>
+                    <h3>Vestido midi casual para mujer.avif</h3>
                     <p>$349.00</p>
                     <button onclick="agregarAlCarrito('Vestido midi casual para mujer', 349.00)">Agregar al Carrito</button>
                 </div>
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Camisa_casual.avif" alt="Camisa Casual">
-                    <h3>3. Camisa Casual</h3>
+                    <h3>Camisa Casual</h3>
                     <p>$799.00</p>
                     <button onclick="agregarAlCarrito('Camisa Casual', 799.00)">Agregar al Carrito</button>
                 </div>
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Camisa_de_vestir_de_algodon_manga_larga_para_hombre.avif" alt="Camisa de vestir">
-                    <h3>4. Camisa de vestir de algodón manga larga para hombre</h3>
+                    <h3>Camisa de vestir de algodón manga larga para hombre</h3>
                     <p>$650.00</p>
                     <button onclick="agregarAlCarrito('Camisa de vestir de algodón manga larga para hombre', 650.00)">Agregar al Carrito</button>
                 </div>
@@ -55,25 +55,25 @@
             <div class="fila" style="display: flex; justify-content: center; gap: 20px;">
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Pantalon_amplio_para_mujer.avif" alt="Pantalón amplio">
-                    <h3>5. Pantalón amplio para mujer</h3>
+                    <h3>Pantalón amplio para mujer</h3>
                     <p>$499.00</p>
                     <button onclick="agregarAlCarrito('Pantalón amplio para mujer', 499.00)">Agregar al Carrito</button>
                 </div>
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Pantalon_slim_de_algodon_para_hombre.avif" alt="Pantalón slim">
-                    <h3>6. Pantalón slim de algodón para hombre</h3>
+                    <h3>Pantalón slim de algodón para hombre</h3>
                     <p>$599.00</p>
                     <button onclick="agregarAlCarrito('Pantalón slim de algodón para hombre', 599.00)">Agregar al Carrito</button>
                 </div>
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Pantalon_straight_para_hombre.avif" alt="Pantalón straight hombre">
-                    <h3>7. Pantalón straight para hombre</h3>
+                    <h3>Pantalón straight para hombre</h3>
                     <p>$550.00</p>
                     <button onclick="agregarAlCarrito('Pantalón straight para hombre', 550.00)">Agregar al Carrito</button>
                 </div>
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Pantalon_straight_para_mujer.avif" alt="Pantalón straight mujer">
-                    <h3>8. Pantalón straight para mujer</h3>
+                    <h3>Pantalón straight para mujer</h3>
                     <p>$520.00</p>
                     <button onclick="agregarAlCarrito('Pantalón straight para mujer', 520.00)">Agregar al Carrito</button>
                 </div>
@@ -81,13 +81,13 @@
             <div class="fila" style="display: flex; justify-content: center; gap: 20px;">
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Vestido_a_la_rodilla_casual_para_mujer.avif" alt="Vestido a la rodilla">
-                    <h3>9. Vestido a la rodilla casual para mujer</h3>
+                    <h3>Vestido a la rodilla casual para mujer</h3>
                     <p>$699.00</p>
                     <button onclick="agregarAlCarrito('Vestido a la rodilla casual para mujer', 699.00)">Agregar al Carrito</button>
                 </div>
                 <div class="producto">
                     <img src="Imagenes_para_la_pagina/Vestido_Elegante.avif" alt="Vestido Elegante">
-                    <h3>10. Vestido Elegante</h3>
+                    <h3>Vestido Elegante</h3>
                     <p>$750.00</p>
                     <button onclick="agregarAlCarrito('Vestido Elegante', 750.00)">Agregar al Carrito</button>
                 </div>
