Base de Datos - Agregada
Se le agrego una base de datos con ello ahora se recibirían todos los pedidos.

--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
         <ul id="lista-carrito"></ul>
         <p>Total: $<span id="total">0.00</span></p>
         <button onclick="vaciarCarrito()">Vaciar Carrito</button>
-    </section>
+        <button onclick="enviarPedido()">Comprar</button>
+    </section>       
 
     <footer>
         <p>&copy; 2025 STYLE - Todos los derechos reservados</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
